--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,10 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "14.15.1",
-    "npm": "6.14.8"
+    "node": "14.15.3",
+    "npm": "6.14.9"
   },
   "keywords": [
+    "javascript",
     "nodejs",
     "express",
     "mongodb",
